--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>Música para todos - Spotify</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <script src="../bower_components/react-components/react-bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
   </head>
   <body>
     <noscript>
